--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "beefy": "^2.1.1",
     "browserify": "^7.0.0",
+    "lodash": "^2.4.1",
     "raf": "^2.0.4",
+    "tic": "^0.2.1",
     "vectors": "^0.1.0",
     "vkey": "^1.0.0"
   }
