Ability to save/restore game

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "beefy": "^2.1.1",
     "browserify": "^7.0.0",
+    "local-store": "^0.2.0",
     "lodash": "^2.4.1",
     "raf": "^2.0.4",
     "tic": "^0.2.1",
