--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "beefy index.js 8080 -- -d"
+    "start": "beefy index.js:bundle.js 8080 -- -d",
+    "build": "browserify -o bundle.js index.js"
   },
   "repository": {
     "type": "git",
